@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = data pixmaps src po
+SUBDIRS = data src po
 
 EXTRA_DIST =
 
