@@ -2,3 +2,4 @@ Makefile
 Makefile.in
 Makefile.in.in
 POTFILES
+qalculate-gtk.pot
